tests/bug_detector_tests/loc3.test
################################################################################
#    Copyright (c) 2014, KAIST.
#    All rights reserved.
#
#    Use is subject to license terms.
#
#    This distribution may include materials developed by third parties.
################################################################################
tests=loc3
BUGDETECTOR_TESTS_DIR=${JS_HOME}/tests/bug_detector_tests
bug-detector-loc
bug-detector-loc_out_WCIequals=\
noStop mode enabled. \n\
 \n\
* Bug Detector * \n\
loc3.js:2:9~2:10: [ReferenceError] Reading absent variable 'g'. \n\
loc3.js:1:9~1:15: [TypeError] Property is trying to access an object, whose value is undefined. \n\
loc3.js:1:9~1:15: [Warning] Too many arguments to function 'f'. \n\
 \n\
============== Total Count ============== \n\
|  RangeErrors       :      0 (  0.00%) | \n\
|  ReferenceErrors   :      1 ( 33.33%) | \n\
|  SyntaxErrors      :      0 (  0.00%) | \n\
|  TypeErrors        :      1 ( 33.33%) | \n\
|  URIErrors         :      0 (  0.00%) | \n\
|  Warnings          :      1 ( 33.33%) | \n\
========================================= \n\
============ Statistics ============= \n\
|  AbsentRead              :      1 | \n\
|  BinaryOperator          :      0 | \n\
|  BuiltinTypeError        :      0 | \n\
|  BuiltinWrongArgType     :      0 | \n\
|  CallConstFunc           :      0 | \n\
|  CallNonConstructor      :      0 | \n\
|  CallNonFunction         :      0 | \n\
|  ConditionalBranch       :      0 | \n\
|  ConvertToNumber         :      0 | \n\
|  DefaultValue            :      0 | \n\
|  Deprecated              :      0 | \n\
|  FunctionArgSize         :      1 | \n\
|  GlobalThis              :      0 | \n\
|  ImplicitTypeConversion  :      0 | \n\
|  AccessingNullOrUndef    :      1 | \n\
|  PrimitiveToObject       :      0 | \n\
|  RangeError              :      0 | \n\
|  Shadowing               :      0 | \n\
|  StrictMode              :      0 | \n\
|  UncalledFunction        :      0 | \n\
|  UnreachableCode         :      0 | \n\
|  ValueNeverRead          :      0 | \n\
|  VaryingTypeArguments    :      0 | \n\
|  WrongThisType           :      0 | \n\
|  RegularExpression       :      0 | \n\
|  WrongArgument           :      0 | \n\
===================================== \n\
\n
bug-detector-loc_err_equals=
