tests/bug_detector_tests/loc3.js
var y = f("a").a;
var x = g("a");
function f() {}

